[WIP] Updating java sdk to 2.9.0 (#397)
* Updating java sdk to 2.9.0
Bumps suggested JDK to 25

* Bump gradle and maven wrappers

* Bump gradle plugins to work with latest gradle version